--- a/temara_new/css/index.css
+++ b/temara_new/css/index.css
@@ -1,4 +1,4 @@
-body
+﻿body
 {
 	margin : auto;
 	max-width: 1000px;
@@ -51,12 +51,9 @@ body
 
 #header
 {
-	background-color : rgb(116,126,114);
-	color : goldenrod;
-	height : 15%;
-	font-size : 60px;
-	text-align : center;
-	margin-bottom : 5px;
+	background-image:url("../fond_ban.png");
+	background-repeat:repeat-x;
+	text-align: center;
 }
 
 /* le menu */
