--- a/temara_new/css/index.css
+++ b/temara_new/css/index.css
@@ -19,6 +19,7 @@
 	behavior: url('http://localhost:8080/temara/library/PIE/PIE.htc');
 	width: 96%;
 	position: relative;
+	min-width: 400px;
 }
 
 .rouge
