--- a/temara_new/css/index.css
+++ b/temara_new/css/index.css
@@ -131,6 +131,11 @@ img {
 	display: none;
 }
 
+.mention
+{
+	color: grey;
+}
+
 /* L'ensemble constitué du "coeur" de la page (tout sauf le header, le nav et le footer) */
 
 #ensemble
